etcd/cluster/general/access-network.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: general-etcd-access
spec:
  podSelector:
    matchLabels:
      app: etcd
      etcd_cluster: general
  policyTypes:
  - Ingress
  ingress:
  - {}
